--- a/src/app/components/working-sheet/donnees/donnees.component.html
+++ b/src/app/components/working-sheet/donnees/donnees.component.html
@@ -53,10 +53,10 @@
               {{pivot.id}}
             </td>
             <td>
-              {{pivot.question}}
+              <p>{{pivot.question}}</p>
             </td>
             <td>
-              {{pivot.reponse}}
+              <p>{{pivot.reponse}}</p>
             </td>
           </tr>
         </ng-template>
@@ -92,7 +92,7 @@
               {{proposition.idPivot}} <b>({{proposition.type == 0 ? 'Q' : 'R'}})</b>
             </td>
             <td>
-              {{proposition.alternative}}
+              <p>{{proposition.alternative}}</p>
             </td>
             <td>
               {{proposition.proposeur}}
