--- a/src/app/components/working-sheet/table-de-crowders/table-de-crowders.component.html
+++ b/src/app/components/working-sheet/table-de-crowders/table-de-crowders.component.html
@@ -31,7 +31,7 @@
           </div>
         </th>
         <th>
-          {{isProposition() ? 'Nombre de pivots' : 'Nombre de propositions à noté'}}
+          {{isProposition() ? 'Nombre de questions/réponses' : 'Nombre de propositions à noté'}}
         </th>
       </tr>
     </ng-template>
