--- a/src/app/components/parametres/parametres.component.html
+++ b/src/app/components/parametres/parametres.component.html
@@ -77,7 +77,7 @@
 
         <div class="p-grid">
 
-          <div class="p-col-12"><b>Temps nécessaire en heurs pour :</b></div>
+          <div class="p-col-12"><b>Temps nécessaire en heures pour :</b></div>
           <div class="p-col-8"><label for="propoDeQuestion">Proposition de question</label></div>
           <div class="p-col-4">: <input [(ngModel)]="parametres.tempsDePropositonDeQuest" type="number" id="propoDeQuestion"
                                         style="width: 80%"/></div>
