--- a/src/app/components/working-sheet/gestion-temps/gestion-temps.component.html
+++ b/src/app/components/working-sheet/gestion-temps/gestion-temps.component.html
@@ -1,5 +1,5 @@
 <div class="p-grid" *ngIf="resultat != null">
-  <div class="p-col-9">
+  <div class="p-col">
     <p-panel header="Répartition du temps">
       <div class="p-grid">
         <div class="p-col-6">
@@ -74,7 +74,7 @@
 
 
   </div>
-  <div class="p-col-3">
+  <div class="p-col-fixed" style="width:270px">
 
     <p-panel header="Récapitulatif">
       <b>Nombre de</b>
